--- a/css/style.css
+++ b/css/style.css
@@ -1746,7 +1746,7 @@ textarea:focus::placeholder {
       background-color: #e5e8e7; }
 
 .tabs-body {
-  background: url(../../img/bg/help-bg.svg) center/cover no-repeat;
+  background: url(../img/bg/help-bg.svg) center/cover no-repeat;
   background-color: #f5f6f6;
   border: 4px solid #f5f6f6;
   border-radius: 12px;
@@ -1917,7 +1917,7 @@ textarea:focus::placeholder {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   border-radius: 20px;
-  background: url(../../img/bg/qwe-bg.svg) right bottom/contain no-repeat;
+  background: url(../img/bg/qwe-bg.svg) right bottom/contain no-repeat;
   background-color: #f5f6f6;
   padding: 24px;
   padding-bottom: 9px; }
@@ -2117,7 +2117,7 @@ textarea:focus::placeholder {
   height: 300px;
   margin-bottom: 24px;
   border-radius: 8px;
-  background: url(../../img/bg/doct-s.svg) right bottom/cover no-repeat;
+  background: url(../img/bg/doct-s.svg) right bottom/cover no-repeat;
   background-size: 100%;
   background-color: #f3faf9;
   position: relative;
@@ -2312,7 +2312,7 @@ textarea:focus::placeholder {
       width: 12px;
       height: 11px;
       position: absolute;
-      background: url(../../img/icons/cross.svg) center/contain no-repeat;
+      background: url(../img/icons/cross.svg) center/contain no-repeat;
       top: 50%;
       left: 0;
       -webkit-transform: translate(0, -50%);
@@ -2897,7 +2897,7 @@ textarea:focus::placeholder {
   border: 3px solid #e5e8e7;
   border-radius: 8px;
   height: 453px;
-  background: url(../../img/bg/serf-bg.svg) right bottom/cover no-repeat;
+  background: url(../img/bg/serf-bg.svg) right bottom/cover no-repeat;
   background-size: 100%;
   position: relative; }
   .sertif-item > img {
@@ -2941,7 +2941,7 @@ textarea:focus::placeholder {
     width: 100%;
     height: 57px;
     position: absolute;
-    background: url(../../img/icons/triangle.svg) top right/contain no-repeat;
+    background: url(../img/icons/triangle.svg) top right/contain no-repeat;
     top: -3px;
     right: -4px;
     z-index: 2; }
@@ -3378,7 +3378,7 @@ body {
     align-items: center;
     margin-right: 0; }
     .header__body.active {
-      background: url(../../img/bg/mob-h.png) center/cover no-repeat;
+      background: url(../img/bg/mob-h.png) center/cover no-repeat;
       -webkit-transform: translate3d(0px, 0px, 0px);
       transform: translate3d(0px, 0px, 0px); } }
     @media (max-width: 1170px) and (max-width: 1170px) {
