--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ textarea:focus::placeholder {
     -webkit-transform: translate(100%, -50%);
     -ms-transform: translate(100%, -50%);
     transform: translate(100%, -50%);
-    background: url(../../img/icons/arr-h.svg) center/contain no-repeat; }
+    background: url(../img/icons/arr-h.svg) center/contain no-repeat; }
 
 .form-search {
   width: 44px;
@@ -621,7 +621,7 @@ textarea:focus::placeholder {
       position: absolute;
       top: 50%;
       left: 0;
-      background: url(../../img/icons/cross-grey.svg) center/contain no-repeat;
+      background: url(../img/icons/cross-grey.svg) center/contain no-repeat;
       -webkit-transform: translate(0, -50%);
       -ms-transform: translate(0, -50%);
       transform: translate(0, -50%); }
@@ -3061,7 +3061,7 @@ textarea:focus::placeholder {
     width: 100%;
     height: 1rem;
     background-color: #222222;
-    -webkit-mask: url(@img/icons/group.svg) no-repeat center/contain; }
+    -webkit-mask: url(../img/icons/group.svg) no-repeat center/contain; }
   .owl-carousel .owl-nav button.owl-next:hover i,
   .owl-carousel .owl-nav button.owl-prev:hover i {
     background-color: #828e8c; }
